[gd_scene load_steps=4 format=3 uid="uid://8ybf44baaiqv"]

[ext_resource type="Script" path="res://Scenes/Enemy/Peasant/Enemy_bullet.gd" id="1_7ow7i"]
[ext_resource type="Texture2D" uid="uid://btaewp0lhkwvk" path="res://Assets/Enemy/Enemy_bullet.png" id="2_g5cfq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wm17r"]
radius = 5.0

[node name="Enemy_bullet" type="CharacterBody2D" groups=["clear"]]
script = ExtResource("1_7ow7i")

[node name="Area2D" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_wm17r")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(10, 2, 2, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_g5cfq")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1.19209e-07, -1.19209e-07)
scale = Vector2(0.7, 0.7)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
